# qprocess_arm_problem

./: Dockerfile.ubuntu.armv7  Readme.md
src/: CMakeLists.txt  exec.cpp  main.cpp
